--- a/Project-poems/Data-Cleaning-and-Modeling.ipynb
+++ b/Project-poems/Data-Cleaning-and-Modeling.ipynb
@@ -6,17 +6,19 @@
    "source": [
     "# Predicting when a poem was written by it's style and word usage.\n",
     "\n",
-    "One of the best things about data science is it's versatility. You can do a data science project on just about anything. For this project I decided to see if a machine learning model can identify the era in which a poem was written by it's word choice and frequency. If the era can be predicted, with what kind of accuracy? Also, are some eras more identifiable by style than others. These were the questions I sought to answer with this project. The model was able to differentiate between the different time periods and predict the poem's class with an 81% accuracy overall, with varying degrees of accuracy for specific classes. Going forward, I intend to engineer additional stylistic features related to word choice and frequency to make the model even more robust. \n",
+    "One of the best things about data science is its versatility. You can do a data science project on just about anything. For this project I decided to see if a machine learning model can identify the era in which a poem was written by its word choice and frequency. If the era can be predicted, with what kind of accuracy? Also, are some eras more identifiable by style than others. These were the questions I sought to answer with this project. \n",
+    "\n",
+    "The model was able to differentiate between the different time periods and predict the poem's class with an 81% accuracy overall, with varying degrees of accuracy for specific classes. Going forward, I intend to engineer additional stylistic features related to word choice and frequency to make the model even more robust. \n",
     "#### Getting Data:\n",
-    "The first step this project required was data collection. It's really nice to be handed a clean data set for a project, but life doesn't always work that way. Data collection can be quite challenging, but can also be quite fun. After searching fruitlessly for a corpus of poetry in a digital text format, there was no choice but to explore other options. Enter webscraping, a cool, fun, and exciting way to collect data. Webscraping is the process of pulling information from web pages, which often contain all their text in the HTML code which dictates the website's structure. Python, the language that I used for all of this analysis, has some packages that enable efficient webscraping. The code for my webscraper is available here: (scraping notebook)\n",
+    "The first step this project required was data collection. It's really nice to be handed a clean data set for a project, but life doesn't always work that way. Data collection can be quite challenging, but can also be quite fun. After searching fruitlessly for a corpus of poetry in a digital text format, there was no choice but to explore other options. Enter webscraping, a cool, fun, and exciting way to collect data. Webscraping is the process of pulling information from web pages, which often contain all their text in the HTML code which dictates the website's structure. Python, the language that I used for all of this analysis, has some packages that enable efficient webscraping. The code for my webscraper is available in the notebook entitled 'Webscraper'.\n",
     "#### Data Cleaning:\n",
-    "A large portion of this project involved the data cleaning process. Since I scraped the data from a website, I first had to remove all the HTML tags and ensure that the lines of the poem weren't pushed together, which would cause some word loss. \n",
+    "A large portion of this project involved the data cleaning process. For example, since I scraped the data from a website, I first had to remove all the HTML tags and ensure that doing that didn't push the lines of the poem together, which would cause some word loss. \n",
     "\n",
     "When analyzing text, a lot of preprocessing is necessary. A computer doesn't read text the way we do, so it would treat 'Cookies' and 'cookies' as two different words. Generally, we convert all our entries to lowercase so that the computer can recognize them. I also had to remove all the punctuation and numbers. \n",
     "#### Classes:\n",
-    "I settled on three different eras to model, the 18th, 19th, and 20th centuries. These are intuitive boundaries, and I was curious to discover if poetry style is significantly different on each side of these boundaries. \n",
+    "I settled on three different eras to model, the 18th, 19th, and 20th centuries. These are arbitrary boundaries that mean something to us, but I was curious to discover if there is a significant difference in poetry style on each side of these boundaries. \n",
     "#### Feature Creation and Modeling:\n",
-    "There are a few different approaches for creating features from text. I used the most common one, a Count Vectorizer. This approach, sometimes called a 'bag of words,' creates a separate feature for each word that appears in the data set. Then, for each poem, it assigns a 1 to words that the poem contains, and a 0 to words that it doesn't. There are more complex approaches, but a simple Count Vectorizer worked best for my data. That makes sense, because a simple count of word usage and frequency may give a better representation of text style than more complex methods that aren't looking for style as much as content. \n",
+    "There are a few different approaches for creating features from text. I used the most common one, a Count Vectorizer. This approach, sometimes called a 'bag of words,' creates a separate feature for each word that appears in the data set. Then, for each poem, it assigns a '1' to words that the poem contains, and a '0' to words that it doesn't. There are more complex approaches, but a simple Count Vectorizer worked best for my data. That makes sense, because a simple count of word usage and frequency may give a better representation of text style than more complex methods that aren't looking for style as much as content. \n",
     "\n",
     "I used a Multinomial Naive Bayes model to distinguish between and predict the classes. This model treats all the features as having a multinomial distribution and assumes independence of all the features. I ran many other models as well, and the Multinomial Naive Bayes consistently performed the best. This model comes with a great feature which returns the log probability of each feature belonging to each class. This gives us some insight into which words are most related to which classes. \n",
     "#### Results:\n",
@@ -199,7 +201,7 @@
    "source": [
     "**Data cleaning commences!**  \n",
     "\n",
-    "Each poem is still wrapped in the HTML tags from it's web page. The BeautifulSoup library has a function to select the text from page, but in this situation, that caused words to be joined together. I elected to clean the data myself with Python. It was a lengthier process, but one that I felt worthwhile given the importance of each word. "
+    "Each poem is still wrapped in the HTML tags from its web page. The BeautifulSoup library has a function to select the text from page, but in this situation, that caused words to be joined together. I elected to clean the data myself with Python. It was a lengthier process, but one that I felt worthwhile given the importance of each word. "
    ]
   },
   {
@@ -643,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Clean poems are achieved!**\n",
+    "**Clean poems achieved!**\n",
     "\n",
     "On to the years for each poet."
    ]
@@ -1821,11 +1823,11 @@
     "\n",
     "I split the data into training and testing sets, so as to control for overfitting. I want a model that generalizes well to new data it hasn't seen before. One way to test that is the train-test-split. If the model performs well on my training data **and** my testing data, I know it works well on data it hasn't seen and isn't overfit to the training data.\n",
     "\n",
-    "I experimented with many models and with many of their different parameters, but surprisingly, the models performed best with the simplest, default parameters. This was most apparent with the Count Vectorizer, which creates a feature for each word present in the data set, and computes the word count for each word in each poem. In most projects dealing with text data, the practice is to take out a list of stop words, words that are common in speech and don't really teach us anything. Words like 'the' and 'his'. In this situation, taking out the stopwords actually hurt the performance of the model. After some thought, this made a lot of sense. This project is not about content, but about style. The frequency of words like 'the' is quite relevant when it comes to style.\n",
+    "I experimented with many models and with many of their different parameters, but surprisingly, the models performed best with the simplest, default parameters. This was most apparent with the Count Vectorizer, which creates a feature for each word present in the data set, and computes the word count for each word in each poem. In most projects dealing with text data, the practice is to take out a list of stop words, words that are common in speech and don't really teach us anything. Words like 'the' and 'his.' In this situation, taking out the stopwords actually hurt the performance of the model. After some thought, this made a lot of sense. This project is not about content, but about style. The frequency of words like 'the' is quite relevant when it comes to style.\n",
     "\n",
     "The best performing model was the Multinomial Naive Bayes Classifier, which gave an overall accuracy score of .82. Below is a visualization of the confusion matrix, which breaks down the accuracy for each class. \n",
     "\n",
-    "The model performs slightly worse when the stopwords are taken out, but I ran that anyway to get a list of the features that were likeliest to belong to each class that were more informative than frequencies of 'the' and 'his' and the 'like'."
+    "The model performs slightly worse when the stopwords are taken out, but I ran that anyway to get a list of the features that were likeliest to belong to each class that were more informative than frequencies of 'the' and 'his' and the 'like.'"
    ]
   },
   {
