--- a/Iowa-liquor/Iowa-liquor.ipynb
+++ b/Iowa-liquor/Iowa-liquor.ipynb
@@ -4,10 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Iowa Liquor Project\n",
     "\n",
-    "# Getting started\n",
-    "\n",
-    "Once you've chosen your scenario, download the data from the Iowa website in csv format. Start by loading the data with pandas. You may need to parse the date columns appropriately."
+    "Can I predict the total liquor sales in Iowa for 2016?"
    ]
   },
   {
@@ -24,8 +23,6 @@
     "import seaborn as sns\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "\n",
-    "\n",
-    "## Load the data into a DataFrame\n",
     "#file_path = ('/Users/chaimgluck/Downloads/Iowa_Liquor_sales_sample_10pct.csv')\n",
     "file_path = ('/Users/chaimgluck/Downloads/Iowa_Liquor_sales_reduced.csv')\n",
     "df = pd.read_csv(file_path, parse_dates=['Date'], infer_datetime_format=True)\n",
@@ -1151,17 +1148,6 @@
    ],
    "source": [
     "ils_by_store.groupby('category').sum().sort_values('total_sales_2015', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#q1_by_store['mean_bottle_volume_ml'] = ils_by_store_group.describe()['bottle_volume_ml']['mean']"
    ]
   },
   {
@@ -2377,108 +2363,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Record your findings\n",
-    "\n",
-    "Be sure to write out anything observations from your exploratory analysis.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Mine the data\n",
-    "\n",
-    "Now you are ready to compute the variables you will use for your regression from the data. For example, you may want to compute total sales per store from Jan to March of 2015, mean price per bottle, etc. Refer to the readme for more ideas appropriate to your scenario.\n",
-    "\n",
-    "Pandas is your friend for this task. Take a look at the operations here for ideas on how to make the best use of pandas and feel free to search for blog and Stack Overflow posts to help you group data by certain variables and compute sums, means, etc. You may find it useful to create a new data frame to house this summary data.\n",
-    " \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Refine the data\n",
-    "\n",
-    "Look for any statistical relationships, correlations, or other relevant properties of the dataset."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Build your models\n",
-    "\n",
-    "Using scikit-learn or statsmodels, build the necessary models for your scenario. Evaluate model fit."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot your results\n",
-    "\n",
-    "Again make sure that you record any valuable information. For example, in the tax scenario, did you find the sales from the first three months of the year to be a good predictor of the total sales for the year? Plot the predictions versus the true values and discuss the successes and limitations of your models"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Present the Results\n",
-    "\n",
-    "Present your conclusions and results. If you have more than one interesting model feel free to include more than one along with a discussion. Use your work in this notebook to prepare your write-up."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -2509,24 +2393,6 @@
     "This data is a valuable resource. It can be used to develop many unique and interesting strategies. Using the process we outlined above, my team can scrape this dataset for all the insight it contains. We can transform it from millions of rows of gibberish into clear, actionable plans and strategies. We look forward to working together with you on this project.    \n",
     "## Thank You!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
